Fix OpenMapTiles & OSM attribution on mobile
In an attempt to hide the navigation zoom in/out controls, I
accidentally hide the attribution on mobile.

.mapboxgl-ctrl was too general of a selector to use.

--- a/resources/assets/sass/map.scss
+++ b/resources/assets/sass/map.scss
@@ -42,7 +42,7 @@
 }
 
 @media(max-width: 640px) {
-    .mapboxgl-ctrl {
+    .mapboxgl-ctrl-top-right {
         display: none;
     }
 }
